fix: Update app/assets/stylesheets/users.scss
add extra padding on clipboard icon

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -506,7 +506,7 @@
   }
 
   .fa-clipboard {
-    padding: 11px 10px;
+    padding: 12px 15px;
   }
 
   .fa-code-branch {
